# genai-cookbook

./: .gitignore  LICENSE.md  NOTICE.md  README.md  dolly_1k.csv  llm-inference-table-monitor.py  old_README.md  pyproject.toml
agent_app_sample_code/: 00_global_config.py  00_shared_config.py  01_data_pipeline.ipynb  01_data_pipeline.py  02_agent -- RAG.py  02_agent.py  02_agent__0README_FIRST.py  02_agent__RAG_only_langchain_sdk.py  02_agent__RAG_only_mlflow_sdk.py  02_agent__function_calling_mlflow_sdk.py  02_agent_setup.ipynb  02_data_pipeline.py  03_agent_proof_of_concept.py  03_create_synthetic_eval.ipynb  03_deploy.py  04_agent__function_calling_openai_sdk.ipynb  04_create_agent--multi.ipynb  04_create_agent-tools.ipynb  04_create_agent.ipynb  04_create_evaluation_set.py  04_create_tools.ipynb  05_cleanup.py  05_evaluate_poc_quality.py  05_tool_calling_agent.ipynb  06_multi_agent_with_genie.ipynb  README.md  cookbook_overview.md  pyproject.toml  requirements.txt  requirements_datapipeline.txt
agent_app_sample_code/agent_with_retriever/: (Clone) 03_agent_proof_of_concept.py  00_global_config.py  02_data_pipeline.py  03_agent_proof_of_concept.py  04_create_evaluation_set.py  05_evaluate_poc_quality.py  06_iterate_on_code_and_config.py
agent_app_sample_code/agents/: agent_config.py  deterministic_agent_with_retriever_only.py  function_calling_agent_w_retriever_tool.py  tool_calling_agent.py
agent_app_sample_code/cookbook_utils/: __init__.py  build_retriever_index.py  chunk_docs.py  cookbook_config.py  data_pipeline_config.py  evaluation_set.py  file_loading.py  recursive_character_text_splitter.py  shared.py
agent_app_sample_code/datapipeline_utils/: build_retriever_index.py  data_pipeline_config.py  file_loading.py  (+1 more)
openai_sdk_agent_app_sample_code/: 01_data_pipeline.ipynb  02_agent_setup.ipynb  03_create_synthetic_eval.ipynb  04_create_tools.ipynb  05_tool_calling_agent.ipynb  pyproject.toml  requirements.txt
(+544 files in other folders)
